@@ -209,7 +209,7 @@ namespace Bilten.UI
                     documentName));
                 p.ShowDialog();
             }
-            catch (InfrastructureException ex)
+            catch (Exception ex)
             {
                 MessageDialogs.showError(ex.Message, this.Text);
             }
