@@ -12,6 +12,9 @@ Promene od r22:
 - Prikazuj plasmane za sprave i viseboj cak i ako je izabrano da ne postoji odvojeno takmicenje 2 ili 3
 
 29-Apr-2017
+- Dodata penalizacija za viseboj
+- Dodat izbor sprava koje ulaze u ekipni rezultat
+- Dodat izbor da li se za viseboj racuna prvi ili bolji prekok
 - Finale kupa se automatski pravi na osnovu prvog i drugog kola, slicno kao zbir vise kola.
 - Kod pravljenja finala kupa ili zbira vise kola, prikazuje se obavestenje ako je gimnasticar u prethodnim kolima
 ucestvovao u razlicitim kategorijama.
